# ERMINE-ENGINE

./: .gitignore  Ermine.sln  Install-ErmineTemplate.bat  MakeProject.bat  README.md  package-internal.bat  premake5.lua
Ermine-Editor/: Ermine-Editor.vcxproj  Ermine-Editor.vcxproj.filters  Ermine-Game.vcxproj.filters  imgui.ini
Ermine-Engine/: Ermine-Engine.vcxproj  Ermine-Engine.vcxproj.filters
Ermine-Engine/include/: AABB.h  (+101 more)
Ermine-Game/: Ermine-Game.vcxproj  Ermine-Game.vcxproj.filters
Ermine-ResourcePipeline/: Ermine-ResourcePipeline.cpp  Ermine-ResourcePipeline.vcxproj  Ermine-ResourcePipeline.vcxproj.filters
Ermine-ResourcePipeline/xresource_pipeline_v2-main/: CMakeLists.txt  README.md
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xcmdline/: README.md
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xcmdline/source/: xcmdline_parser.h
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xerr/: README.md
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xerr/documentation/: contributing.md
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xerr/source/: xerr.h
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xstrtool/: .gitignore
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xstrtool/source/: xstrtool.cpp  xstrtool.h
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xstrtool/source/unit_tests/: xstrtool_unit_test.h
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xtextfile/: .gitignore  CMakeLists.txt  README.md
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xtextfile/source/: xtextfile.cpp
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xtextfile/source/Unitest/: main.cpp
Ermine-ResourcePipeline/xresource_pipeline_v2-main/dependencies/xtextfile/source/implementation/: xtextfile_inline.h
Ermine-ResourcePipeline/xresource_pipeline_v2-main/documentation/: CommadLineParameters.md
Ermine-ResourcePipeline/xresource_pipeline_v2-main/source/: xresource_pipeline.cpp  xresource_pipeline.h  xresource_pipeline_dependencies.h
Ermine-ScriptAssembly/: Behaviour.cs  Component.cs  Ermine-ScriptAssembly.csproj  GameplayHUD.cs  MonoBehaviour.cs  NavAgent.cs  Object.cs  StateMachine.cs
Ermine-ScriptSandbox/: AnimationExample.cs  AttackState.cs  ChaseState.cs  Credits.cs  CutscenePlayer.cs  CutsceneVideo.cs  DamagePlayer.cs  DisableLightCone.cs  EndElevator.cs  EnemyFootstep.cs  Ermine-ScriptSandbox.csproj  FakePlayer.cs  GameManager.cs  GearRotateAnimation.cs  GearRotateAnimationTest.cs  GearRotateAnimationTest2.cs  HealthDrivenMaterialFill.cs  IdleState.cs  LifeEssenceSkillController.cs  LoadingScreen.cs  MainMenu.cs  MainMenuVideo.cs  MoveState.cs  OrbTeleport.cs  PatrolState.cs  PlayerController.cs  PlayerController2.cs  RotatingPlatform.cs  Sandbox.cs  Sandbox2.cs  SpawnPointController.cs  Sphere.cs  SpotLightTrigger.cs  Switch.cs  TemplateScript.cs  Test1.cs  Test2.cs  Test3.cs  TimedDestroy.cs  UpwardsPlatform.cs  (+2 more)
(+575 files in other folders)
